# bintest

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: database-cli-testing-requirements.md
examples/: basic.toml  basic.yaml  binary-path.yaml  conditional.yaml  copy-dir.yaml  db-isolation.yaml  db-snapshot.yaml  env.yaml  failures.yaml  files.yaml  fs-diff.yaml  parallel.yaml  regex.yaml  signals.yaml  sql.yaml  stdin.yaml  steps.yaml  tree.yaml  workflow.yaml
examples/sandbox-dir/: README.md  bintest.yaml  test_persist.yaml
examples/suite-config/: README.md  bintest.yaml  test_env.yaml  test_override.yaml
product/: mission.md  prd.md  tech.md
src/: database.rs  env.rs  loader.rs  main.rs  runner.rs  schema.rs
tests/: file_parallel.rs
