[package]
name = "bintest"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A declarative integration test runner for executables"
repository = "https://github.com/adamcooper1386/bintest"
readme = "README.md"
keywords = ["testing", "cli", "integration-tests", "yaml"]
categories = ["development-tools::testing"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
toml = "0.8"
